2025-02-21T00:46:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13447588956 # 572
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-21
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 402 1379 / 404 1404
* notice: next accum: outdated-unq outdated-all / unq all: 403 1403 / 404 1404
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-06] / []

2025-02-19T00:45:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13403021858 # 570
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-19
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 401 1378 / 404 1404
* notice: next accum: outdated-unq outdated-all / unq all: 402 1379 / 404 1404
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-04] / []

2025-02-18T00:45:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13380928100 # 569
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-18
* notice: last 14d: unq all: 3 26
* notice: prev accum: outdated-unq outdated-all / unq all: 400 1376 / 404 1404
* notice: next accum: outdated-unq outdated-all / unq all: 401 1378 / 404 1404
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-03] / []

2025-02-17T00:48:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13360537077 # 568