@@ -1,3 +1,12 @@
+2025-02-26T00:46:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13534004582 # 577
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-26
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 403 1403 / 404 1404
+* notice: next accum: outdated-unq outdated-all / unq all: 403 1403 / 405 1405
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-25]
+
 2025-02-21T00:46:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13447588956 # 572
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-21
